<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:layout_marginTop="39dp"
        android:text="@string/title_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25dp"

        />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_view"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/subtitle_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"

            />

        <TextView
            android:id="@+id/subtitle1_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle1_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_click1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/linear_layout"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/button_digit"


        />

    <Button
        android:id="@+id/btn_click2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@+id/btn_click1"
        android:layout_toRightOf="@+id/btn_click1"
        android:text="@string/button_digit" />

    <Button
        android:id="@+id/btn_click3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@id/btn_click1"
        android:layout_toRightOf="@id/btn_click2"
        android:onClick="onClick"
        android:text="@string/button_digit" />

    <Button
        android:id="@+id/btn_click4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/btn_click1"
        android:layout_marginLeft="30dp"
        android:text="@string/button_digit" />

    <Button
        android:id="@+id/btn_click5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@+id/btn_click4"
        android:layout_toRightOf="@+id/btn_click4"
        android:text="@string/button_digit" />

    <Button
        android:id="@+id/btn_click6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@id/btn_click5"
        android:layout_toRightOf="@+id/btn_click5"
        android:text="@string/button_digit" />

    <Button
        android:id="@+id/btn_click7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@id/btn_click4"
        android:layout_marginLeft="30dp"
        android:text="@string/button_digit" />

    <Button
        android:id="@+id/btn_click8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@id/btn_click7"
        android:layout_toRightOf="@id/btn_click7"
        android:text="@string/button_digit" />

    <Button
        android:id="@+id/btn_click9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@id/btn_click7"
        android:layout_toRightOf="@id/btn_click8"
        android:text="@string/button_digit" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="startTheGame"
        android:text="@string/play" />

    <Button
        android:id="@+id/btn_turnoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="stopTheGame"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/point_view"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/points"
        android:textSize="20dp" />

</RelativeLayout>